changed hero image and fixed navbar scrollbar top

--- a/css/agency.css
+++ b/css/agency.css
@@ -82,6 +82,7 @@ background-color: #222;
 .navbar-default .navbar-brand {
 font-family: 'Noto Sans', sans-serif;
 color: #fed136;
+padding: 15px;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
@@ -136,7 +137,7 @@ header {
 text-align: center;
 color: #fff;
 background-attachment: scroll;
-background-image: url(../img/7.jpg);
+background-image: url(../img/hero.jpg);
 background-position: center center;
 background-repeat: none;
 -webkit-background-size: cover;
@@ -204,6 +205,18 @@ font-weight: 400;
 section {
 padding: 150px 0;
 }
+
+.navbar-default.navbar-shrink {
+padding: 10px 0;
+background-color: #222;
+}
+
+.navbar-default .navbar-nav>.active>a {
+border-radius: 0;
+color: #fff;
+background-color: #fed136;
+}
+
 }
 .service-heading {
 margin: 15px 0;
